# MemoryChain

./: .gitignore  NEXT_STEPS.md  README.md
apps/api/: README.md  pyproject.toml
apps/api/memorychain_api/: auth.py  config.py  dependencies.py  main.py  schemas.py
apps/api/memorychain_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/memorychain_api/routers/: activities.py  audit_log.py  chat.py  checkins.py  engagement.py  goals.py  heuristics.py  ingest.py  insights.py  journal.py  metrics.py  prompt_cycles.py  prompts.py  protocols.py  questionnaires.py  reviews.py  search.py  tasks.py  users.py
apps/api/memorychain_api/services/: answer_parser.py  chat.py  companion_actions.py  companion_execution.py  companion_orchestrator.py  companion_state.py  context_snapshot.py  extraction.py  guided_prompts.py  ingestion.py  insight_detection.py  intent.py  llm.py  query_handler.py  questionnaire.py  seed_templates.py  weekly_review.py  whynn_extractor.py  whynn_parser.py
apps/api/memorychain_api/storage/: db.py  repository.py
apps/api/tests/: test_api.py  test_companion.py  test_consolidation.py  test_intent.py  test_phase0.py  test_phase2.py  test_phase3.py  test_phase8.py
apps/cli/: pyproject.toml
apps/cli/memorychain_cli/: client.py  config.py  display.py  main.py  repl.py  settings.py  setup.py  terminal.py  theme.py
apps/cli/memorychain_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/cli/tests/: test_cli.py  test_repl.py  test_setup.py  test_terminal.py
core/: WHYNNFIGHT OS.odt
(+25 files in other folders)
